# chroma_knowledge_search

./: .coverage  .gitignore  Dockerfile_backend  Dockerfile_frontend  README.md  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
src/chroma_knowledge_search/backend/app/: api.py  auth.py  chroma_client.py  config.py  db.py  embeddings.py  logging_config.py  main.py  models.py  moderation.py  rag.py  schemas.py  utils.py
src/chroma_knowledge_search/frontend/: app.py
tests/: README.md  conftest.py
tests/backend/: test_api.py  test_auth.py  test_chroma_client.py  test_embeddings.py  test_moderation.py  test_rag.py  test_utils.py
tests/frontend/: test_streamlit_ui.py
